--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .spyproject/
 .idea/
 QConfig.py
-.ipynb_checkpoints/
-__pycache__/
+./exercises/.ipynb_checkpoints/
+./exercises/__pycache__/
 .resources/
